@@ -56,6 +56,14 @@
                 </compilerArgs>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.2.0</version>
+        <configuration>
+            <additionalOptions>--enable-preview</additionalOptions>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
